修正警告问题